--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,23 +5,19 @@
 
 </div>
 
-
-<div class="courses">
-
-    <div class="course-card">
-
-        <div class="course-title">
-            Angular Core Deep Dive
-        </div>
-        <img width="300" alt="Angular Logo"
-             src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-core-in-depth-small.png">
-
-        <div class="course-description">
-            A detailed walk-through of the most important part of Angular - the Core and Common modules.
-        </div>
-
+    <!-- <div class="demo">
+        <div>Start Date: {{startDate | date: 'MMM dd yyyy'}}</div>
+        <div> {{title | titlecase }}</div>
+        <div> {{price | number: '3.3-5' }}</div>
+        <div> {{price | currency: 'EUR' }}</div>
+        <div> Percentage: {{rate | percent}}</div>
+    </div> -->
+    <div *ngFor="let pair of course | keyvalue">
+        {{pair.key + ' ' + pair.value}}
     </div>
-
+<div class="courses">
+    <course-card  *ngFor="let course of courses | slice:0:2; index as i;"
+    (courseSelected)="onCourseSelected($event)" [course]="course" [cardIndex]="i + 1"></course-card>
 </div>
 
 
